Delete secondary user endpoint (#3615)
* add delete secondary user deletion with integration tests

* add delete permission for supporter product data to lambda

* reset snapshot to origin

* pluralize and use dash case naming convention

* move composed subscription name to owm module for reusabilty

* move into a more restful endpoints patterns

* fix import order

* fix bad rebase sonflicts

---------
